# reverse-proxy

./: .gitignore  README.md  array.ipynb  docker-compose.yml  docker_stats.csv  main.py  nginx_status.ipynb  nginx_status_log.txt  pyproject.toml  requirements.txt
conf/nginx/: nginx.conf
conf/nginx/conf.d/: default.conf
docker/fastapi/: Dockerfile
note/: docker_stats.csv  docker_stats.ipynb  numpy 860.csv  numpy-basic.ipynb  numpy_1200_docker_stats.csv:Zone.Identifier  numpy_1200_output.csv:Zone.Identifier  python 860.csv  python vs numpy.ipynb  python_1200_docker_stats.csv:Zone.Identifier  python_1200_output.csv:Zone.Identifier
note/nginx_stats/: nginx_stats.csv
pyweb2/: index.html
pyweb3/: index.html
pyweb4/: index.html
src/reverse_proxy/: higher_ordder_fun.py
